--- a/code/views/partlist.ejs
+++ b/code/views/partlist.ejs
@@ -8,12 +8,17 @@
                 <h4 class="card-header">Alkatrészek</h4>
                 <div class="container">
                     <% if(typeof error !== 'undefined'){ %>
-                        <div class="alert alert-warning alert-dismissible fade show my-3" role="alert">
-                            <strong>Hoppá!</strong> Úgy néz ki nem állítottad be, hogy mennyit szeretnél rendelni.
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
+                    <div class="alert alert-warning alert-dismissible fade show text-center my-3" role="alert">
+                        <% if( error === 'no parts found'){ %>
+                        <strong>Hoppá!</strong> Nem találtunk ehhez a kocsihoz alkatrészeket. :(
+                        <% } %>
+                        <% if( error === 'Zero quantity error'){ %>
+                        <strong>Hoppá!</strong> Úgy néz ki nem állítottad be a rendelés mennyiségét.
+                        <% } %>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
                     <% } %>
                     <table class="table mt-3 table-hover table-bordered">
                         <thead>
