--- a/code/views/partlist.ejs
+++ b/code/views/partlist.ejs
@@ -7,18 +7,42 @@
             <div class="card text-center">
                 <h4 class="card-header">Alkatrészek</h4>
                 <div class="container">
-                    <% if(typeof error !== 'undefined'){ %>
+                    <% if(loggedin === true) { %>
+                    <% if(typeof error!== 'undefined' && error === 'no carid'){ %>
                     <div class="alert alert-warning alert-dismissible fade show text-center my-3" role="alert">
-                        <% if( error === 'no parts found'){ %>
-                        <strong>Hoppá!</strong> Nem találtunk ehhez a kocsihoz alkatrészeket. :(
-                        <% } %>
-                        <% if( error === 'Zero quantity error'){ %>
-                        <strong>Hoppá!</strong> Úgy néz ki nem állítottad be a rendelés mennyiségét.
-                        <% } %>
+                        <strong>Hoppá!</strong> Kérlek a hozzáadáshoz előbb válassz egy autót!
                         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
+
+                    <% } else{%>
+                    <div class="card text-center my-3">
+                        <a class="btn btn-success btn-lg" href="/part/<%= car._id %>/new" role="button">
+                            <i class="fas fa-plus"></i> Új alkatrész hozzáadása ( <%= car.carbrand %> -> <%= car.model %> )
+                        </a>
+                    </div>
+                    <% } %>
+                    <% } %>
+                    <% if(typeof error !== 'undefined'){ %>
+
+                    <% if( error === 'no parts found'){ %>
+                    <div class="alert alert-warning alert-dismissible fade show text-center my-3" role="alert">
+                        <strong>Hoppá!</strong> Nem találtunk ehhez a kocsihoz alkatrészeket. :(
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <% } %>
+                    <% if( error === 'Zero quantity error'){ %>
+                    <div class="alert alert-warning alert-dismissible fade show text-center my-3" role="alert">
+                        <strong>Hoppá!</strong> Úgy néz ki nem állítottad be a rendelés mennyiségét.
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <% } %>
+
                     <% } %>
                     <table class="table mt-3 table-hover table-bordered">
                         <thead>
@@ -68,11 +92,6 @@
                                     <a class="btn btn-danger btn-sm"
                                         href="/part/<%= onePart._carid %>/del/<%= onePart._id %>" role="button">
                                         <i class="fas fa-times"></i>
-                                    </a>
-
-                                    <a class="btn btn-success btn-sm" href="/part/<%= onePart._carid %>/new"
-                                        role="button">
-                                        <i class="fas fa-plus"></i>
                                     </a>
                                 </td>
                                 <% } %>
