added some low effort tests

--- a/code/views/careditnew.ejs
+++ b/code/views/careditnew.ejs
@@ -46,8 +46,8 @@
                     </div>
                     <div class="text-center">
                         <button class="btn btn-success mb-3 mx-4" role="button">Mentés</button>
-                        <button class="btn btn-danger mb-3 mx-4"
-                            href="/car/<%= (typeof car==='undefined') ? '' : car.carbrand.toLowerCase() %>">Mégsem</button>
+                        <a class="btn btn-danger mb-3 mx-4"
+                            href="/car/<%= (typeof car==='undefined') ? '' : car.carbrand.toLowerCase() %>">Mégsem</a>
                     </div>
                 </form>
             </div>
