--- a/code/views/parteditnew.ejs
+++ b/code/views/parteditnew.ejs
@@ -40,7 +40,7 @@
                     </div>
                     <div class="text-center">
                         <button type="submit" class="btn btn-success my-3 mx-4">Mentés</button>
-                        <button class="btn btn-danger my-3 mx-4" href="/part">Mégsem</button>
+                        <a class="btn btn-danger my-3 mx-4" href="/part">Mégsem</a>
                     </div>
                 </form>
             </div>
